# pipegate

./: .dockerignore  Dockerfile  README.md  fly.toml  pyproject.toml
pipegate/: auth.py  client.py  schemas.py  server.py
